为什么要关心分配率?